# V5-prod

./: .env.arm  .gitattributes  .gitignore  100  110  Dockerfile  EMERGENCY_BORROW_GUIDE.md  PRODUCTION_SYNC_TARGET.txt  README.md  README.zh-CN.md  deep_analysis.sh  deploy_event_driven.sh  event_driven_check.py  main.py  monitor.sh  monitor_event_driven.sh  pyproject.toml  pytest.ini  requirements-research.txt  requirements.txt  rollback_event_driven.sh  scripts_cleanup_plan.md  start_monitor.sh  trading_analysis.sh
configs/: backtest_100u.yaml  backtest_优化前_F2_25%_固定成本.yaml  backtest_优化后_F2_20%_校准成本.yaml  backtest_激进_F2_15%_校准成本.yaml  blacklist.json  borrow_prevention_rules.json  bypass_min_notional.yaml  config.yaml  event_driven.yaml  extreme_debug.yaml  extreme_test.yaml  final_fix.yaml  fix_regime_threshold.yaml  fixed_test.yaml  force_open.yaml  full_backtest_optimized.yaml  ic_research_30d_100sym.yaml  live_20u_real.yaml  live_20u_real.yaml.backup.20260301_155703  live_20u_real_aggressive.yaml  live_20u_real_open_position.yaml  live_20u_shadow_regime.yaml  live_20u_test.yaml  live_20u_test.yaml.backup  live_20u_test_backup.yaml  live_20u_test_fast.yaml  live_normal_accelerated.yaml  live_prod.yaml  live_prod_100u_real.yaml  live_small.yaml  loader.py  minimal_test.yaml  multi_strategy.yaml  multi_symbol_test.yaml  optimized_debug.yaml  runtime_config.py  schema.py  sentiment_weights_production.py  shadow_tuned_xgboost_overrides.yaml  simple_test.yaml  (+4 more)
data/: hmm_training_features.npy
deploy/: __init__.py  install_systemd.sh  prod_release.py  render_systemd_units.py  run_daily_cost_rollup.sh  sync_prod_release.py  v5-live-20u.user.service.new
docs/: AI_ENHANCEMENT_PLAN.py  ASSET_IMPORT_CHECKLIST_PHASE1_CLAWGPT.md  ASSET_MIGRATION_BASELINE_MAP.md  BUG_FIX_CHECKLIST.md  CURRENT_PRODUCTION_FLOW.md  FACTOR_WEIGHTS_CONFIG.py  (+14 more)
(+5235 files in other folders)
