[project]
name = "v5-trading-bot"
version = "0.1.0"
description = "V5 cross-sectional trend rotation trading system (OKX spot, dry-run first)."
requires-python = ">=3.10"

dependencies = [
  "pydantic>=2.6,<3",
  "python-dotenv>=1.0",
  "numpy>=1.23",
  "pandas>=2.0",
  "requests>=2.31",
  "httpx>=0.27",
  "pyyaml>=6.0",
  "scipy>=1.10",
  "ccxt>=4.0",
  "flask>=3.0",
  "scikit-learn>=1.4",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
