[project]
name = "v5-trading-bot"
version = "0.1.0"
description = "V5 cross-sectional trend rotation trading system (OKX spot, dry-run first)."
requires-python = ">=3.10"

dependencies = [
  "pydantic>=2.6,<3",
  "python-dotenv>=1.0",
  "numpy>=1.23",
  "pandas>=2.0",
  "requests>=2.31",
  "httpx>=0.27",
  "pyyaml>=6.0",
  "scipy>=1.10",
  "ccxt>=4.0",
  "flask>=3.0",
  "waitress>=3.0",
  "paramiko>=3.5",
]

[project.optional-dependencies]
research = [
  "scikit-learn>=1.4",
  "xgboost>=3.2,<3.3",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff.lint.per-file-ignores]
"archive/**/*.py" = ["E402"]
"deploy/**/*.py" = ["E402"]
"main.py" = ["E402"]
"scripts/**/*.py" = ["E402"]
"src/core/pipeline.py" = ["E402"]
"src/execution/kill_switch_guard.py" = ["E402"]
"src/regime/hmm_regime_detector.py" = ["E402"]
"tests/**/*.py" = ["E402"]
